# statsdproxy

./: .craft.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  example.yaml  foo.yaml  udp_recv.py  udp_send.py
.github/workflows/: ci.yml
scripts/: bump-version.sh
src/: .config.rs.pending-snap  cadence.rs  config.rs  lib.rs  main.rs  middleware.rs  testutils.rs  types.rs
src/middleware/: add_tag.rs  aggregate.rs  allow_tag.rs  cardinality_limit.rs  deny_tag.rs  filter_tag.rs  mirror.rs  mod.rs  sample.rs  sentry.rs  server.rs  strip_tag.rs  tag_cardinality_limit.rs  upstream.rs
