[package]
name = "statsdproxy"
authors = ["Sentry <oss@sentry.io>"]
description = "A proxy for transforming, pre-aggregating and routing statsd metrics"
repository = "https://github.com/getsentry/statsdproxy"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.23", features = ["derive"] }
crc32fast = "1.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
cadence = { version = "0.29.1", optional = true }
signal-hook = "0.3.17"

[dev-dependencies]
insta = { version = "1.31.0", features = ["yaml"] }
