[package]
name = "statsdproxy"
authors = ["Sentry <oss@sentry.io>"]
description = "A proxy for transforming, pre-aggregating and routing statsd metrics"
repository = "https://github.com/getsentry/statsdproxy"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.0"
clap = { version = "4.3.23", features = ["derive"], optional = true }
crc32fast = "1.3.2"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_yaml = { version = "0.9", optional = true }
cadence = { version = "0.29.0", optional = true }
signal-hook = { version = "0.3.17", optional = true }

[features]
default = ["cli"]
# opt out of cli feature to get rid of CLI dependencies
cli = ["clap", "serde", "serde_yaml", "signal-hook"]
# opt into cadence feature to enable cadence adapter

[dev-dependencies]
insta = { version = "1.31.0", features = ["yaml"] }
